--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -12,6 +12,7 @@
         <a href="https://www.sejuku.net/">ホーム</a>
         <a href="https://www.sejuku.net/">社会</a>
         <a href="https://www.sejuku.net/">経済</a>
+        <a href="https://www.sejuku.net/">スポーツ</a>
         <a href="https://www.sejuku.net/">テクノロジー</a>
      </nav>
   </header>
@@ -24,13 +25,12 @@
          <p>
             日本でも年々人気の高まるハロウィン。<br>
             今年は大手和菓子店5社がハロウィン向けの和菓子セットを共同開発しました。</p>
-            <audio src="kadai_008_ichi.mp3" controls></audio>
+            <audio src="ichi.mp3" controls></audio>
        </section>
 
       <section>
         <h3>私のおすすめ和菓子アンケートフォーム</h3>
         <form>
-           <form>
             <label>氏名</label>
             <input type="text" placeholder="名前を入力してください">
             <br>
@@ -49,7 +49,7 @@
             <label>その他</label><input type="radio" name="gender">
             <br>
 
-            <label>おすすめの和菓子の名称</label>
+            <label>おすすめ和菓子の名称</label>
             <input type="text" placeholder="例：みたらし団子">
             <br>
 
@@ -64,8 +64,6 @@
             <input type="submit" value="送信">
             <input type="reset" value="リセット">
 
-
-           </form>
         </form>
       </section>
     
